fixed styling and overflow - made responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -398,12 +398,6 @@ input[type=text], select, textarea {
   }
 }
 
-@media screen and (min-width: 1500px) {
-  .content {
-    min-height: 600px;
-  }
-}
-
 @media screen and (min-width: 2500px) {
   .content {
     min-height: 700px;
